# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//tools/json_schema_compiler/json_features.gni")
import("//tools/json_schema_compiler/json_schema_api.gni")
import("schemas.gni")

# assert(enable_extensions)

json_schema_api("api") {
  sources = schema_sources
  schemas = true
  bundle = true
  bundle_name = "Brave"

  deps = schema_dependencies
}

# GYP version: extensions/shell/browser/api/api_registration.gyp:shell_api_registration
json_schema_api("api_registration") {
  sources = schema_sources
  impl_dir = "//electron/brave/common/extensions/api"
  bundle_registration = true
  bundle_name = "Brave"

  deps = [
    ":api",
    "//extensions/common",
  ]

  deps += schema_dependencies
}

json_features("api_features") {
  feature_type = "APIFeature"
  method_name = "AddBraveAPIFeatures"
  sources = [
    "../../../../../chrome/common/extensions/api/_api_features.json",
    "_api_features.json",
  ]
}

json_features("permission_features") {
  feature_type = "PermissionFeature"
  method_name = "AddBravePermissionFeatures"
  sources = [
    "../../../../../chrome/common/extensions/api/_permission_features.json",
    "_permission_features.json",
  ]
}

json_features("manifest_features") {
  feature_type = "ManifestFeature"
  method_name = "AddBraveManifestFeatures"
  sources = [
    "../../../../../chrome/common/extensions/api/_manifest_features.json",
    # "_manifest_features.json",
  ]
}

group("extensions_features") {
  public_deps = [
    ":api_features",
    ":manifest_features",
    ":permission_features",
  ]
}
