source_set("prerender") {
  sources = [
    "//chrome/browser/prerender/prerender_histograms.cc",
    "//chrome/browser/prerender/prerender_histograms.h",
    "prerender_contents.cc",
    "prerender_manager.cc",
    "prerender_manager_factory.cc",
  ]

  deps = [
    "//electron/chromium_src:sessions",
    "//components/history/content/browser",
    "//components/history/core/browser",
    "//components/history/core/common",
    "//components/keyed_service/content",
  ]
}
