source_set("safe_browsing") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ "//electron/chromium_src:chromium_src_config" ]

  sources = [
    "password_reuse_modal_warning_dialog.cc",
  ]

  public_deps = [
    "//chrome/browser/safe_browsing",
    "//content/public/browser",
  ]

  deps = [
    "//electron/chromium_src/chrome/browser/interstitials",
    "//electron/chromium_src/chrome/browser/prerender",
    "//electron/chromium_src/chrome/browser/signin",
  ]
}

