source_set("safe_browsing") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ "//electron/chromium_src:chromium_src_config" ]

  sources = [
    "chrome_password_protection_service.cc",
    "//chrome/browser/safe_browsing/chrome_password_protection_service.h",
    "safe_browsing_service.cc",
    "//chrome/browser/safe_browsing/safe_browsing_service.h",
  ]

  deps = [
    "//components/safe_browsing/common:interfaces",
    "//third_party/blink/public/mojom:mojom_platform",
    "//third_party/protobuf:protobuf_lite",
  ]

  if (is_win) {
    cflags = [ "/wd4172", ]
  } else {
    cflags = [ "-Wnoreturn-stack-address" ]
  }
}
